# rag-knoweledge-base

./: .gitignore  README.md
client/: package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.tsx  auth.tsx  authConfig.ts  authHooks.ts  index.css  main.tsx  routeTree.gen.ts  routerContext.ts
client/src/components/: app-header.tsx  app-sidebar.tsx  nav-items.tsx  nav-user.tsx
client/src/components/chat/: audio-recorder-button.tsx  chat-interface.tsx  chat-message.tsx
client/src/components/documents/: columns.tsx  data-table.tsx  document-modal.tsx  documents-table.tsx
client/src/components/ui/: alert-dialog.tsx  button.tsx  label.tsx  textarea.tsx
client/src/hooks/: use-api-client.ts
client/src/lib/api/: chat.ts  client.ts  documents.ts
client/src/routes/: __root.tsx  _authenticated.tsx  login.tsx
client/src/routes/_authenticated/: chat.tsx  dashboard.tsx  index.tsx
server/: .env.example  alembic.ini  docker-compose.yml  pyproject.toml  run.py
server/src/: auth.py  config.py  exceptions.py  main.py  router.py  settings.py
server/src/ai/: embeddings_agent.py  events.py  service.py
server/src/database/: __init__.py  core.py
server/src/database/migrations/: env.py  script.py.mako
server/src/database/migrations/versions/: 40ff05868668_vectors.py  5735013f16ac_init.py  57ef7f3b3337_user_updated_at.py  687a39fd411b_init.py  6fbc769b6009_user_azure_id.py  9d0f3ef53454_vectors.py
server/src/document/: models.py  repository.py  schemas.py  service.py  views.py
server/src/speech_to_text/: schemas.py  service.py  views.py
server/src/user/: models.py  repository.py  schemas.py  service.py  views.py
